<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.courseproject.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/bkgImg"
        app:srcCompat="@drawable/blurry_bar1"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:focusable="false"
        android:text="@string/txtGender" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type"
        android:layout_alignStart="@+id/type"
        android:layout_alignTop="@+id/txtGender"
        android:entries="@array/gender"
        android:prompt="@string/prompt1"
        android:spinnerMode="dialog" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/gender"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGender"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtWeight" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWeight"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_horizontal|center"
        android:hint="@string/weight"
        android:inputType="numberSigned"
        android:cursorVisible="false"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weight"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:focusable="false"
        android:text="@string/txtType" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtType"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:entries="@array/type"
        android:gravity="center_horizontal|center"
        android:prompt="@string/prompt2"
        android:spinnerMode="dialog" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/type"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/type"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtNumber" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weight"
        android:layout_alignStart="@+id/weight"
        android:layout_below="@+id/txtNumber"
        android:ems="10"
        android:gravity="center_horizontal|center"
        android:hint="@string/number"
        android:inputType="numberSigned"
        android:cursorVisible="false"
        android:textColorLink="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:focusable="false"
        android:text="@string/txtTime" />

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/number"
        android:layout_alignStart="@+id/number"
        android:layout_below="@+id/txtTime"
        android:ems="10"
        android:gravity="center_horizontal|center"
        android:hint="@string/time"
        android:inputType="numberDecimal"
        android:cursorVisible="false"
        android:textColorLink="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnBAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:text="@string/btnBAC"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</android.widget.RelativeLayout>
